chore(collection): move import endpoint to /collection
